Fix spacing and center illustrations

--- a/projects/static/css/illustrations.css
+++ b/projects/static/css/illustrations.css
@@ -1,10 +1,10 @@
 #illustrations {
   position: relative;
-  width: 97%;
-  margin: 20px auto;
-  padding-top: 30px;
-  padding-bottom: 60px;
-  margin-top: 100px;
+  width: 95%;
+  margin: 0 auto;
+  padding-top: 130px;
+  padding-bottom: 80px;
+  text-align: center;
 }
 .extraDivToFixSlider {
   outline: none;
@@ -71,7 +71,7 @@
 #newIco {
   position: absolute;
   left: 35px;
-  top: 0;
+  top: 110px;
 }
 #illustrationSlider {
   height: 600px;
